Fix #119102: GLSL was the default formatter without a file extension

Regression in [0] which registered the GLSL formatter before Python.
Resolve and note that the registration order matters in code-comments.

[0]: 462c144f414343ffbbac3546f1fae2bbf0bd52db